src/ref/raylib3.0.h

    typedef enum { false, true } bool;
typedef struct Vector2 {
    float x;
    float y;
} Vector2;
typedef struct Vector4 {
    float x;
    float y;
    float z;
    float w;
} Vector4;
typedef struct Color {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
typedef struct Rectangle {
    float x;
    float y;
    float width;
    float height;
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture2D {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture2D;
typedef Texture2D Texture;
typedef Texture2D TextureCubemap;
typedef struct RenderTexture2D {
    unsigned int id;        
    Texture2D texture;      
    Texture2D depth;        
    bool depthTexture;      
} RenderTexture2D;
typedef struct Font {
    int baseSize;           
    int charsCount;         
    Texture2D texture;      
    Rectangle *recs;        
    CharInfo *chars;        
} Font;
RLAPI void DrawPixel(int posX, int posY, Color color);                                                   
RLAPI void DrawPixelV(Vector2 position, Color color);                                                    
RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                
RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                     
RLAPI void DrawLineEx(Vector2 startPos, Vector2 endPos, float thick, Color color);                       
RLAPI void DrawLineBezier(Vector2 startPos, Vector2 endPos, float thick, Color color);                   
RLAPI void DrawLineStrip(Vector2 *points, int numPoints, Color color);                                   
RLAPI void DrawCircle(int centerX, int centerY, float radius, Color color);                              
RLAPI void DrawCircleSector(Vector2 center, float radius, int startAngle, int endAngle, int segments, Color color);     
RLAPI void DrawCircleSectorLines(Vector2 center, float radius, int startAngle, int endAngle, int segments, Color color);    
RLAPI void DrawCircleGradient(int centerX, int centerY, float radius, Color color1, Color color2);       
RLAPI void DrawCircleV(Vector2 center, float radius, Color color);                                       
RLAPI void DrawCircleLines(int centerX, int centerY, float radius, Color color);                         
RLAPI void DrawEllipse(int centerX, int centerY, float radiusH, float radiusV, Color color);             
RLAPI void DrawEllipseLines(int centerX, int centerY, float radiusH, float radiusV, Color color);        
RLAPI void DrawRing(Vector2 center, float innerRadius, float outerRadius, int startAngle, int endAngle, int segments, Color color); 
RLAPI void DrawRingLines(Vector2 center, float innerRadius, float outerRadius, int startAngle, int endAngle, int segments, Color color);    
RLAPI void DrawRectangle(int posX, int posY, int width, int height, Color color);                        
RLAPI void DrawRectangleV(Vector2 position, Vector2 size, Color color);                                  
RLAPI void DrawRectangleRec(Rectangle rec, Color color);                                                 
RLAPI void DrawRectanglePro(Rectangle rec, Vector2 origin, float rotation, Color color);                 
RLAPI void DrawRectangleGradientV(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientH(int posX, int posY, int width, int height, Color color1, Color color2);
RLAPI void DrawRectangleGradientEx(Rectangle rec, Color col1, Color col2, Color col3, Color col4);       
RLAPI void DrawRectangleLines(int posX, int posY, int width, int height, Color color);                   
RLAPI void DrawRectangleLinesEx(Rectangle rec, int lineThick, Color color);                              
RLAPI void DrawRectangleRounded(Rectangle rec, float roundness, int segments, Color color);              
RLAPI void DrawRectangleRoundedLines(Rectangle rec, float roundness, int segments, int lineThick, Color color); 
RLAPI void DrawTriangle(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                                
RLAPI void DrawTriangleLines(Vector2 v1, Vector2 v2, Vector2 v3, Color color);                           
RLAPI void DrawTriangleFan(Vector2 *points, int numPoints, Color color);                                 
RLAPI void DrawTriangleStrip(Vector2 *points, int pointsCount, Color color);                             
RLAPI void DrawPoly(Vector2 center, int sides, float radius, float rotation, Color color);               
RLAPI void DrawPolyLines(Vector2 center, int sides, float radius, float rotation, Color color);          
RLAPI bool CheckCollisionRecs(Rectangle rec1, Rectangle rec2);                                           
RLAPI bool CheckCollisionCircles(Vector2 center1, float radius1, Vector2 center2, float radius2);        
RLAPI bool CheckCollisionCircleRec(Vector2 center, float radius, Rectangle rec);                         
RLAPI Rectangle GetCollisionRec(Rectangle rec1, Rectangle rec2);                                         
RLAPI bool CheckCollisionPointRec(Vector2 point, Rectangle rec);                                         
RLAPI bool CheckCollisionPointCircle(Vector2 point, Vector2 center, float radius);                       
RLAPI bool CheckCollisionPointTriangle(Vector2 point, Vector2 p1, Vector2 p2, Vector2 p3);               
RLAPI Image LoadImage(const char *fileName);                                                             
RLAPI Image LoadImageEx(Color *pixels, int width, int height);                                           
RLAPI Image LoadImagePro(void *data, int width, int height, int format);                                 
RLAPI Image LoadImageRaw(const char *fileName, int width, int height, int format, int headerSize);       
RLAPI void UnloadImage(Image image);                                                                     
RLAPI void ExportImage(Image image, const char *fileName);                                               
RLAPI void ExportImageAsCode(Image image, const char *fileName);                                         
RLAPI Color *GetImageData(Image image);                                                                  
RLAPI Vector4 *GetImageDataNormalized(Image image);                                                      
RLAPI Image GenImageColor(int width, int height, Color color);                                           
RLAPI Image GenImageGradientV(int width, int height, Color top, Color bottom);                           
RLAPI Image GenImageGradientH(int width, int height, Color left, Color right);                           
RLAPI Image GenImageGradientRadial(int width, int height, float density, Color inner, Color outer);      
RLAPI Image GenImageChecked(int width, int height, int checksX, int checksY, Color col1, Color col2);    
RLAPI Image GenImageWhiteNoise(int width, int height, float factor);                                     
RLAPI Image GenImagePerlinNoise(int width, int height, int offsetX, int offsetY, float scale);           
RLAPI Image GenImageCellular(int width, int height, int tileSize);                                       
RLAPI Image ImageCopy(Image image);                                                                      
RLAPI Image ImageFromImage(Image image, Rectangle rec);                                                  
RLAPI Image ImageText(const char *text, int fontSize, Color color);                                      
RLAPI Image ImageTextEx(Font font, const char *text, float fontSize, float spacing, Color tint);         
RLAPI void ImageToPOT(Image *image, Color fillColor);                                                    
RLAPI void ImageFormat(Image *image, int newFormat);                                                     
RLAPI void ImageCrop(Image *image, Rectangle crop);                                                      
RLAPI void ImageAlphaCrop(Image *image, float threshold);                                                
RLAPI void ImageAlphaClear(Image *image, Color color, float threshold);                                  
RLAPI void ImageAlphaMask(Image *image, Image alphaMask);                                                
RLAPI void ImageAlphaPremultiply(Image *image);                                                          
RLAPI void ImageResize(Image *image, int newWidth, int newHeight);                                       
RLAPI void ImageResizeNN(Image *image, int newWidth,int newHeight);                                      
RLAPI void ImageResizeCanvas(Image *image, int newWidth, int newHeight, int offsetX, int offsetY, Color color);  
RLAPI void ImageMipmaps(Image *image);                                                                   
RLAPI void ImageDither(Image *image, int rBpp, int gBpp, int bBpp, int aBpp);                            
RLAPI void ImageFlipVertical(Image *image);                                                              
RLAPI void ImageFlipHorizontal(Image *image);                                                            
RLAPI void ImageRotateCW(Image *image);                                                                  
RLAPI void ImageRotateCCW(Image *image);                                                                 
RLAPI void ImageColorTint(Image *image, Color color);                                                    
RLAPI void ImageColorInvert(Image *image);                                                               
RLAPI void ImageColorGrayscale(Image *image);                                                            
RLAPI void ImageColorContrast(Image *image, float contrast);                                             
RLAPI void ImageColorBrightness(Image *image, int brightness);                                           
RLAPI void ImageColorReplace(Image *image, Color color, Color replace);                                  
RLAPI Color *ImageExtractPalette(Image image, int maxPaletteSize, int *extractCount);                    
RLAPI Rectangle GetImageAlphaBorder(Image image, float threshold);                                       
RLAPI void ImageClearBackground(Image *dst, Color color);                                                
RLAPI void ImageDrawPixel(Image *dst, int posX, int posY, Color color);                                  
RLAPI void ImageDrawPixelV(Image *dst, Vector2 position, Color color);                                   
RLAPI void ImageDrawLine(Image *dst, int startPosX, int startPosY, int endPosX, int endPosY, Color color); 
RLAPI void ImageDrawLineV(Image *dst, Vector2 start, Vector2 end, Color color);                          
RLAPI void ImageDrawCircle(Image *dst, int centerX, int centerY, int radius, Color color);               
RLAPI void ImageDrawCircleV(Image *dst, Vector2 center, int radius, Color color);                        
RLAPI void ImageDrawRectangle(Image *dst, int posX, int posY, int width, int height, Color color);       
RLAPI void ImageDrawRectangleV(Image *dst, Vector2 position, Vector2 size, Color color);                 
RLAPI void ImageDrawRectangleRec(Image *dst, Rectangle rec, Color color);                                
RLAPI void ImageDrawRectangleLines(Image *dst, Rectangle rec, int thick, Color color);                   
RLAPI void ImageDraw(Image *dst, Image src, Rectangle srcRec, Rectangle dstRec, Color tint);             
RLAPI void ImageDrawText(Image *dst, Vector2 position, const char *text, int fontSize, Color color);     
RLAPI void ImageDrawTextEx(Image *dst, Vector2 position, Font font, const char *text, float fontSize, float spacing, Color color); 
RLAPI Texture2D LoadTexture(const char *fileName);                                                       
RLAPI Texture2D LoadTextureFromImage(Image image);                                                       
RLAPI TextureCubemap LoadTextureCubemap(Image image, int layoutType);                                    
RLAPI RenderTexture2D LoadRenderTexture(int width, int height);                                          
RLAPI void UnloadTexture(Texture2D texture);                                                             
RLAPI void UnloadRenderTexture(RenderTexture2D target);                                                  
RLAPI void UpdateTexture(Texture2D texture, const void *pixels);                                         
RLAPI Image GetTextureData(Texture2D texture);                                                           
RLAPI Image GetScreenData(void);                                                                         
RLAPI void GenTextureMipmaps(Texture2D *texture);                                                        
RLAPI void SetTextureFilter(Texture2D texture, int filterMode);                                          
RLAPI void SetTextureWrap(Texture2D texture, int wrapMode);                                              