src/raylib/raylib3.pas


  // Basic shapes drawing functions
    DrawPixel: procedure(posX: Integer; posY: Integer; color: TColor); cdecl;
    DrawPixelV: procedure(position: TVector2; color: TColor); cdecl;
    DrawLine: procedure(startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
    DrawLineV: procedure(startPos: TVector2; endPos: TVector2; color: TColor); cdecl;
    DrawLineEx: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
    DrawLineBezier: procedure(startPos: TVector2; endPos: TVector2; thick: Single; color: TColor); cdecl;
    DrawLineStrip: procedure(points: PVector2; numPoints: Integer; color: TColor); cdecl;
    DrawCircle: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
    DrawCircleSector: procedure(center: TVector2; radius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
    DrawCircleSectorLines: procedure(center: TVector2; radius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
    DrawCircleGradient: procedure(centerX: Integer; centerY: Integer; radius: Single; color1: TColor; color2: TColor); cdecl;
    DrawCircleV: procedure(center: TVector2; radius: Single; color: TColor); cdecl;
    DrawCircleLines: procedure(centerX: Integer; centerY: Integer; radius: Single; color: TColor); cdecl;
    DrawEllipse: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
    DrawEllipseLines: procedure(centerX: Integer; centerY: Integer; radiusH: Single; radiusV: Single; color: TColor); cdecl;
    DrawRing: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
    DrawRingLines: procedure(center: TVector2; innerRadius: Single; outerRadius: Single; startAngle: Integer; endAngle: Integer; segments: Integer; color: TColor); cdecl;
    DrawRectangle: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
    DrawRectangleV: procedure(position: TVector2; size: TVector2; color: TColor); cdecl;
    DrawRectangleRec: procedure(rec: TRectangle; color: TColor); cdecl;
    DrawRectanglePro: procedure(rec: TRectangle; origin: TVector2; rotation: Single; color: TColor); cdecl;
    DrawRectangleGradientV: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
    DrawRectangleGradientH: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color1: TColor; color2: TColor); cdecl;
    DrawRectangleGradientEx: procedure(rec: TRectangle; col1: TColor; col2: TColor; col3: TColor; col4: TColor); cdecl;
    DrawRectangleLines: procedure(posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
    DrawRectangleLinesEx: procedure(rec: TRectangle; lineThick: Integer; color: TColor); cdecl;
    DrawRectangleRounded: procedure(rec: TRectangle; roundness: Single; segments: Integer; color: TColor); cdecl;
    DrawRectangleRoundedLines: procedure(rec: TRectangle; roundness: Single; segments: Integer; lineThick: Integer; color: TColor); cdecl;
    DrawTriangle: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
    DrawTriangleLines: procedure(v1: TVector2; v2: TVector2; v3: TVector2; color: TColor); cdecl;
    DrawTriangleFan: procedure(points: PVector2; numPoints: Integer; color: TColor); cdecl;
    DrawTriangleStrip: procedure(points: PVector2; pointsCount: Integer; color: TColor); cdecl;
    DrawPoly: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;
    DrawPolyLines: procedure(center: TVector2; sides: Integer; radius: Single; rotation: Single; color: TColor); cdecl;

  // Basic shapes collision detection functions
    CheckCollisionRecs: function(rec1: TRectangle; rec2: TRectangle): boolean; cdecl;
    CheckCollisionCircles: function(center1: TVector2; radius1: Single; center2: TVector2; radius2: Single): boolean; cdecl;
    CheckCollisionCircleRec: function(center: TVector2; radius: Single; rec: TRectangle): boolean; cdecl;
    GetCollisionRec: function(rec1: TRectangle; rec2: TRectangle): TRectangle; cdecl;
    CheckCollisionPointRec: function(point: TVector2; rec: TRectangle): boolean; cdecl;
    CheckCollisionPointCircle: function(point: TVector2; center: TVector2; radius: Single): boolean; cdecl;
    CheckCollisionPointTriangle: function(point: TVector2; p1: TVector2; p2: TVector2; p3: TVector2): boolean; cdecl;

  //------------------------------------------------------------------------------------
  // Texture Loading and Drawing Functions (Module: textures)
  //------------------------------------------------------------------------------------

  // Image loading functions
  // NOTE: This functions do not require GPU access
    LoadImage: function(const fileName: PUTF8Char): TImage; cdecl;
    LoadImageEx: function(pixels: PColor; width: Integer; height: Integer): TImage; cdecl;
    LoadImagePro: function(data: Pointer; width: Integer; height: Integer; format: Integer): TImage; cdecl;
    LoadImageRaw: function(const fileName: PUTF8Char; width: Integer; height: Integer; format: Integer; headerSize: Integer): TImage; cdecl;
    UnloadImage: procedure(image: TImage); cdecl;
    ExportImage: procedure(image: TImage; const fileName: PUTF8Char); cdecl;
    ExportImageAsCode: procedure(image: TImage; const fileName: PUTF8Char); cdecl;
    GetImageData: function(image: TImage): PColor; cdecl;
    GetImageDataNormalized: function(image: TImage): PVector4; cdecl;

  // Image generation functions
    GenImageColor: function(width: Integer; height: Integer; color: TColor): TImage; cdecl;
    GenImageGradientV: function(width: Integer; height: Integer; top: TColor; bottom: TColor): TImage; cdecl;
    GenImageGradientH: function(width: Integer; height: Integer; left: TColor; right: TColor): TImage; cdecl;
    GenImageGradientRadial: function(width: Integer; height: Integer; density: Single; inner: TColor; outer: TColor): TImage; cdecl;
    GenImageChecked: function(width: Integer; height: Integer; checksX: Integer; checksY: Integer; col1: TColor; col2: TColor): TImage; cdecl;
    GenImageWhiteNoise: function(width: Integer; height: Integer; factor: Single): TImage; cdecl;
    GenImagePerlinNoise: function(width: Integer; height: Integer; offsetX: Integer; offsetY: Integer; scale: Single): TImage; cdecl;
    GenImageCellular: function(width: Integer; height: Integer; tileSize: Integer): TImage; cdecl;

  // Image manipulation functions
    ImageCopy: function(image: TImage): TImage; cdecl;
    ImageFromImage: function(image: TImage; rec: TRectangle): TImage; cdecl;
    ImageText: function(const text: PUTF8Char; fontSize: Integer; color: TColor): TImage; cdecl;
    ImageTextEx: function(font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single; tint: TColor): TImage; cdecl;
    ImageToPOT: procedure(image: PImage; fillColor: TColor); cdecl;
    ImageFormat: procedure(image: PImage; newFormat: Integer); cdecl;
    ImageAlphaMask: procedure(image: PImage; alphaMask: TImage); cdecl;
    ImageAlphaClear: procedure(image: PImage; color: TColor; threshold: Single); cdecl;
    ImageAlphaCrop: procedure(image: PImage; threshold: Single); cdecl;
    ImageAlphaPremultiply: procedure(image: PImage); cdecl;
    ImageCrop: procedure(image: PImage; crop: TRectangle); cdecl;
    ImageResize: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
    ImageResizeNN: procedure(image: PImage; newWidth: Integer; newHeight: Integer); cdecl;
    ImageResizeCanvas: procedure(image: PImage; newWidth: Integer; newHeight: Integer; offsetX: Integer; offsetY: Integer; color: TColor); cdecl;
    ImageMipmaps: procedure(image: PImage); cdecl;
    ImageDither: procedure(image: PImage; rBpp: Integer; gBpp: Integer; bBpp: Integer; aBpp: Integer); cdecl;
    ImageFlipVertical: procedure(image: PImage); cdecl;
    ImageFlipHorizontal: procedure(image: PImage); cdecl;
    ImageRotateCW: procedure(image: PImage); cdecl;
    ImageRotateCCW: procedure(image: PImage); cdecl;
    ImageColorTint: procedure(image: PImage; color: TColor); cdecl;
    ImageColorInvert: procedure(image: PImage); cdecl;
    ImageColorGrayscale: procedure(image: PImage); cdecl;
    ImageColorContrast: procedure(image: PImage; contrast: Single); cdecl;
    ImageColorBrightness: procedure(image: PImage; brightness: Integer); cdecl;
    ImageColorReplace: procedure(image: PImage; color: TColor; replace: TColor); cdecl;
    ImageExtractPalette: function(image: TImage; maxPaletteSize: Integer; extractCount: PInteger): PColor; cdecl;
    GetImageAlphaBorder: function(image: TImage; threshold: Single): TRectangle; cdecl;

  // Image drawing functions
  // NOTE: Image software-rendering functions (CPU)
    ImageClearBackground: procedure(dst: PImage; color: TColor); cdecl;
    ImageDrawPixel: procedure(dst: PImage; posX: Integer; posY: Integer; color: TColor); cdecl;
    ImageDrawPixelV: procedure(dst: PImage; position: TVector2; color: TColor); cdecl;
    ImageDrawLine: procedure(dst: PImage; startPosX: Integer; startPosY: Integer; endPosX: Integer; endPosY: Integer; color: TColor); cdecl;
    ImageDrawLineV: procedure(dst: PImage; start: TVector2; &end: TVector2; color: TColor); cdecl;
    ImageDrawCircle: procedure(dst: PImage; centerX: Integer; centerY: Integer; radius: Integer; color: TColor); cdecl;
    ImageDrawCircleV: procedure(dst: PImage; center: TVector2; radius: Integer; color: TColor); cdecl;
    ImageDrawRectangle: procedure(dst: PImage; posX: Integer; posY: Integer; width: Integer; height: Integer; color: TColor); cdecl;
    ImageDrawRectangleV: procedure(dst: PImage; position: TVector2; size: TVector2; color: TColor); cdecl;
    ImageDrawRectangleRec: procedure(dst: PImage; rec: TRectangle; color: TColor); cdecl;
    ImageDrawRectangleLines: procedure(dst: PImage; rec: TRectangle; thick: Integer; color: TColor); cdecl;
    ImageDraw: procedure(dst: PImage; src: TImage; srcRec: TRectangle; dstRec: TRectangle; tint: TColor); cdecl;
    ImageDrawText: procedure(dst: PImage; position: TVector2; const text: PUTF8Char; fontSize: Integer; color: TColor); cdecl;
    ImageDrawTextEx: procedure(dst: PImage; position: TVector2; font: TFont; const text: PUTF8Char; fontSize: Single; spacing: Single; color: TColor); cdecl;

  // Texture loading functions
  // NOTE: These functions require GPU access
    LoadTexture: function(const fileName: PUTF8Char): TTexture2D; cdecl;
    LoadTextureFromImage: function(image: TImage): TTexture2D; cdecl;
    LoadTextureCubemap: function(image: TImage; layoutType: Integer): TTextureCubemap; cdecl;
    LoadRenderTexture: function(width: Integer; height: Integer): TRenderTexture2D; cdecl;
    UnloadTexture: procedure(texture: TTexture2D); cdecl;
    UnloadRenderTexture: procedure(target: TRenderTexture2D); cdecl;
    UpdateTexture: procedure(texture: TTexture2D; const pixels: Pointer); cdecl;
    GetTextureData: function(texture: TTexture2D): TImage; cdecl;
    GetScreenData: function: TImage; cdecl;

  // Texture configuration functions
    GenTextureMipmaps: procedure(texture: PTexture2D); cdecl;
    SetTextureFilter: procedure(texture: TTexture2D; FilterMode: TTextureFilterMode); cdecl;
    SetTextureWrap: procedure(texture: TTexture2D; wrapMode: Integer); cdecl;
